; ModuleID = '/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkmylofw.c_parse_opt_board.c'
source_filename = "/home/carl/AnghaBench/lede/tools/firmware-utils/src/extr_mkmylofw.c_parse_opt_board.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i32, i32, i32 }
%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@board = common dso_local global %struct.TYPE_5__* null, align 8
@.str = private unnamed_addr constant [36 x i8] c"invalid/unknown board specified: %s\00", align 1
@fw_header = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@flash_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_opt_board(i8 signext %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca i8*, align 8
  store i8 %0, i8* %4, align 1
  store i8* %1, i8** %5, align 8
  %6 = load i8, i8* %4, align 1
  %7 = load i8*, i8** %5, align 8
  %8 = call i64 @required_arg(i8 signext %6, i8* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %35

11:                                               ; preds = %2
  %12 = load i8*, i8** %5, align 8
  %13 = call %struct.TYPE_5__* @find_board(i8* %12)
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** @board, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %15 = icmp eq %struct.TYPE_5__* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %11
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @errmsg(i32 0, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %17)
  br label %35

19:                                               ; preds = %11
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 4
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @fw_header, i32 0, i32 3), align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 3
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @fw_header, i32 0, i32 2), align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @fw_header, i32 0, i32 1), align 4
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @fw_header, i32 0, i32 0), align 4
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** @board, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* @flash_size, align 4
  store i32 0, i32* %3, align 4
  br label %36

35:                                               ; preds = %16, %10
  store i32 -1, i32* %3, align 4
  br label %36

36:                                               ; preds = %35, %19
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @required_arg(i8 signext, i8*) #1

declare dso_local %struct.TYPE_5__* @find_board(i8*) #1

declare dso_local i32 @errmsg(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
